changed border for .card

--- a/index.html
+++ b/index.html
@@ -24,30 +24,32 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
-        <div class="card" id="pokemonCardContent">
-          <div class="close" onclick="closePokemonCard()">X</div>
-          <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
-          <div class="arrow right" onclick="nextPokemon()">&#10095;</div>
-          <img id="pokemon-card-img" src="" class="card-img-top" style="height:200px; width:200px">
-          <h2 id="pokemonName"></h2>
-          <div id="pokemon-description"></div>
-          <div class="card-body">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Über</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Stärken</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Entwicklung</button>
-              </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"></div>
-              <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"></div>
-              <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                <div class="d-flex flex-row justify-content-evenly" id="evolution"></div>
+        <div class="card-container" style="border-radius: 8px !important;">
+          <div class="card" id="pokemonCardContent">
+            <div class="close" onclick="closePokemonCard()">X</div>
+            <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
+            <div class="arrow right" onclick="nextPokemon()">&#10095;</div>
+            <img id="pokemon-card-img" src="" class="card-img-top" style="height:200px; width:200px">
+            <h2 id="pokemonName"></h2>
+            <div id="pokemon-description"></div>
+            <div class="card-body">
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Über</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Stärken</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Entwicklung</button>
+                </li>
+              </ul>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"></div>
+                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"></div>
+                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                  <div class="d-flex flex-row justify-content-evenly" id="evolution"></div>
+                </div>
               </div>
             </div>
           </div>
