--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body onload="renderAllPokemon()">
@@ -24,7 +25,7 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
-        <div class="card-container" style="border-radius: 8px !important;">
+        <div class="card-container" style="border-radius: 8px !important;" id="pokemonCardContainer">
           <div class="card" id="pokemonCardContent">
             <div class="close" onclick="closePokemonCard()">X</div>
             <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
