--- a/index.html
+++ b/index.html
@@ -69,15 +69,9 @@
     <footer>
       <span>coded by Anica Gillen, 2024</span>
       <a href="https://pokeapi.co/">PokeAPI</a>
-      <a href="#">Impressum</a>
+      <a href="./impressum.html">Impressum</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- 
-<a href="https://www.flaticon.com/de/kostenlose-icons/waage" title="waage Icons">Waage Icons erstellt von Muhammad_Usman - Flaticon</a>
-<a href="https://www.flaticon.com/de/kostenlose-icons/herrscher" title="herrscher Icons">Herrscher Icons erstellt von Creaticca Creative Agency - Flaticon</a>
-
--->
