changed design imprint

--- a/impressum.html
+++ b/impressum.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <div class="bg-light">
+        <div class="bg-white bg-opacity-75">
             <h1>Impressum</h1>
             <p>Anica Gillen<br />Nikolaus-Gro&szlig;-Str. 20<br />50259 Pulheim</p>
             <h2>Kontakt</h2>
