--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
-        <div class="card-container" style="border-radius: 8px !important;" id="pokemonCardContainer">
+        <div class="card-container rounded-4" id="pokemonCardContainer">
           <div class="card" id="pokemonCardContent">
             <div class="close" onclick="closePokemonCard()">X</div>
             <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
