--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeDex</title>
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/fonts.css">
+    <link rel="stylesheet" href="./CSS/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body onload="renderAllPokemon()" id="body">
@@ -15,7 +15,7 @@
   <nav class="navbar bg-body-tertiary" style="background-color: white !important">
     <div class="container-fluid">
       <a href="./index.html" id="logo">
-        <img class="logo" src="./img/Logo.jpg" alt="Logo Pokedex">
+        <img class="logo" src="../img/Logo.jpg" alt="Logo Pokedex">
       </a>
       <div class="inputContainer">
         <input placeholder="Suche Pokémon..." id="input" class="input" name="text" type="text">
@@ -25,31 +25,33 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
-        <div class="card-container rounded-4" id="pokemonCardContainer">
-          <div class="card" id="pokemonCardContent">
-            <div class="close" onclick="closePokemonCard()">X</div>
-            <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
-            <div class="arrow right" onclick="nextPokemon()">&#10095;</div>
-            <img id="pokemon-card-img" src="" class="card-img-top" style="height:200px; width:200px">
-            <h2 id="pokemonName"></h2>
-            <div id="pokemon-description"></div>
-            <div class="card-body">
-              <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Über</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Stärken</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Entwicklung</button>
-                </li>
-              </ul>
-              <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"></div>
-                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"></div>
-                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                  <div class="d-flex flex-row justify-content-evenly" id="evolution"></div>
+        <div class="rounded-4 !important">
+          <div class="card-container" id="pokemonCardContainer">
+            <div class="card" id="pokemonCardContent">
+              <div class="close" onclick="closePokemonCard()">X</div>
+              <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
+              <div class="arrow right" onclick="nextPokemon()">&#10095;</div>
+              <img id="pokemon-card-img" src="" class="card-img-top" style="height:200px; width:200px">
+              <h2 id="pokemonName"></h2>
+              <div id="pokemon-description"></div>
+              <div class="card-body">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Über</button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Stärken</button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Entwicklung</button>
+                  </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                  <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"></div>
+                  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"></div>
+                  <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                    <div class="d-flex flex-row justify-content-evenly" id="evolution"></div>
+                  </div>
                 </div>
               </div>
             </div>
