--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
-        <div class="rounded-4 !important">
           <div class="card-container" id="pokemonCardContainer">
             <div class="card" id="pokemonCardContent">
               <div class="close" onclick="closePokemonCard()">X</div>
@@ -56,7 +55,6 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
       <div id="pokedex"></div>
       <br>
@@ -74,6 +72,9 @@
       <a href="./impressum.html">Impressum</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./JS/script.js"></script>
+    <script src="./JS/generate.js"></script>
+    <script src="./JS/search.js"></script>
+    <script src="./JS/translate.js"></script>
   </body>
 </html>
