changed next and prev pokemon function

--- a/impressum.html
+++ b/impressum.html
@@ -28,8 +28,9 @@
             <h2>Kontakt</h2>
             <p>E-Mail: anica.gillen@gmx.de</p>
             <p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
-            <p>Die Icons wurden heruntergeladen von:</p>
+            <p class="fw-bolder text-decoration-underline">Die Icons sind unter folgenden Links zu finden:</p>
             <a href="https://www.flaticon.com/de/kostenlose-icons/waage" title="waage Icons">Waage Icons erstellt von Muhammad_Usman - Flaticon</a>
+            <br>
             <a href="https://www.flaticon.com/de/kostenlose-icons/herrscher" title="herrscher Icons">Herrscher Icons erstellt von Creaticca Creative Agency - Flaticon</a>
         </div>
     </main>
@@ -38,6 +39,5 @@
         <a href="https://pokeapi.co/">PokeAPI</a>
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
