--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 </header>
     <main>
       <div id="pokemonCard" class="pokemonCard-bg d-none">
+        <div class="borderRadius">
           <div class="card-container" id="pokemonCardContainer">
             <div class="card" id="pokemonCardContent">
               <div class="close" onclick="closePokemonCard()">X</div>
-              <div class="arrow left" onclick="prevPokemon()">&#10094;</div>
-              <div class="arrow right" onclick="nextPokemon()">&#10095;</div>
+              <div id="prevButton" class="arrow left" onclick="prevPokemon()">&#10094;</div>
+              <div id="nextButton" class="arrow right" onclick="nextPokemon()">&#10095;</div>
               <img id="pokemon-card-img" src="" class="card-img-top" style="height:200px; width:200px">
               <h2 id="pokemonName"></h2>
               <div id="pokemon-description"></div>
@@ -55,6 +56,7 @@
               </div>
             </div>
           </div>
+        </div>
       </div>
       <div id="pokedex"></div>
       <br>
@@ -72,9 +74,9 @@
       <a href="./impressum.html">Impressum</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./JS/script.js"></script>
     <script src="./JS/generate.js"></script>
     <script src="./JS/search.js"></script>
     <script src="./JS/translate.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
