changed order structure and refactored code

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="pokedex"></div>
       <br>
       <div class="loadButton">
-        <button class="button" onclick="loadMorePokemon()">
+        <button id="loadMoreButton" class="button" onclick="loadMorePokemon()">
         <span class="one">load more</span>
         <span class="two">load...</span>
         </button>
@@ -77,6 +77,7 @@
     <script src="./JS/generate.js"></script>
     <script src="./JS/search.js"></script>
     <script src="./JS/translate.js"></script>
+    <script src="./JS/colors.js"></script>
     <script src="./JS/script.js"></script>
   </body>
 </html>
